[package]
name = "web_app_bookings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = { version = "1.0.125", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
log = "0.4.14"
env_logger = "0.8.3"
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
rusqlite = { version = "0.25.0", features = ["chrono", "uuid"] }
derive-new = "0.5.9"
rocket = { version = "0.5.0-rc.2", features = ["json"] }

